# ScandiQA

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml
config/: config.yaml
config/model/: electra.yaml  nbailab-bert-base.yaml  xlmr-base.yaml  xlmr-large-qa-sv.yaml  xlmr-large.yaml
config/training/: debugging.yaml  standard.yaml
notebooks/: analyse-scandiqa-datasets.ipynb  analyse-translations.ipynb  data_eda.ipynb  model-inference-examples.ipynb  push-to-hub.ipynb
scripts/: build_dataset.py
src/scandi_qa/: __init__.py  answer_extraction.py  builder.py  cache.py  cleaning.py  data.py  demo.py  embedder.py  merger.py  scandiqa.py  train.py  translation.py  utils.py
src/scripts/: build_qa_dataset.py  train.py  translate.py
