[tool.poetry]
name = "scandi_qa"
version = "0.0.1"
description = "Scandinavian question-answering models and datasets."
authors = ["Dan Saattrup Nielsen"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = "^2.10.0"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
jupyterlab = "^3.4.2"
click = "^8.1.3"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
nbstripout = "^0.5.0"
mypy = "^0.961"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
