[tool.poetry]
name = "scandi_qa"
version = "0.0.1"
description = "Scandinavian question-answering models and datasets."
authors = ["Dan Saattrup Nielsen"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
jupyterlab = "^3.4.2"
click = "^8.1.3"
black = {extras = ["jupyter"], version = "^22.3.0"}
flake8 = "^4.0.1"
isort = "^5.10.1"
nbstripout = "^0.5.0"
mypy = "^0.961"
datasets = "^2.2.2"
transformers = "^4.19.2"
torch = "^1.11.0"
pandas = "^1.4.2"
tqdm = "^4.64.0"
ipywidgets = "^7.7.0"
apache-beam = "^2.39.0"
sentence-transformers = "^2.2.0"
python-dotenv = "^0.20.0"
requests = "^2.28.0"
types-requests = "^2.27.30"
blingfire = "^0.1.8"
scipy = "1.8.1"
pdoc = "^12.0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ['--verbose',
           '--durations=10',
           '--color=yes',
           '-s',
           '-vv',
           '--doctest-modules']
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
