[tool.poetry]
name = "scandi_qa"
version = "0.0.1"
description = "Scandinavian question-answering models and datasets."
authors = [
    "Dan Saattrup Nielsen <dan.nielsen@alexandra.dk>",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
hydra-core = "^1.1.1"
jupyterlab = "^3.4.2"
click = "^8.1.3"
flake8 = "^4.0.1"
mypy = ">=0.961,<1.0"
datasets = "^2.2.2"
pandas = "^1.4.2"
tqdm = "^4.64.0"
ipywidgets = "^7.7.0"
apache-beam = "^2.39.0"
sentence-transformers = "^2.2.0"
python-dotenv = ">=0.20.0,<1.0.0"
requests = "^2.31.0"
types-requests = "^2.27.30"
scipy = "^1.10.0"
nltk = "^3.7"
matplotlib = "^3.5.3"
evaluate = "^0.2.2"
torch = "^1.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-xdist = "^2.5.0"
pytest-cov = "^3.0.0"
pre-commit = "^2.17.0"
pdoc = "^7.1.1"
black = "^22.6.0"
isort = "^5.10.1"
readme-coverage-badger = ">=0.1.2,<1.0.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    '--verbose',
    '--durations=10',
    '--color=yes',
    '-s',
    '-vv',
    '--doctest-modules',
    '--cov=src/{{cookiecutter.package_name}}',
    '-n 2',
]
xfail_strict = true
filterwarnings = ["ignore"]
log_cli_level = "info"
testpaths = ["tests", "src/scandi_qa"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
